--- a/packages/lab/src/toggle-button/ToggleButton.css
+++ b/packages/lab/src/toggle-button/ToggleButton.css
@@ -7,7 +7,7 @@
   border: 0 solid transparent;
   border-radius: 0;
   white-space: pre;
-  height: calc(var(--salt-size-base) - var(--salt-spacing-75));
+  height: var(--salt-size-base);
   color: var(--salt-text-primary-foreground);
   text-transform: var(--salt-actionable-textTransform);
   font-weight: var(--salt-actionable-primary-fontWeight);
