--- a/packages/lab/stories/accordion/accordion.stories.css
+++ b/packages/lab/stories/accordion/accordion.stories.css
@@ -1,15 +1,13 @@
 .story-root {
   height: 600px;
   overflow-y: auto;
-  border: solid 1px var(--salt-container-primary-borderColor);
   padding: var(--salt-size-base);
 }
 
-.accordion {
+.panel-content {
+  padding: var(--salt-size-base);
+}
+
+.saltAccordion {
   width: 600px;
-}
-
-.accordion-story-details {
-  padding: var(--salt-size-base);
-  border: solid 1px var(--salt-text-primary-foreground);
 }
