--- a/packages/theme/css/foundations/duration.css
+++ b/packages/theme/css/foundations/duration.css
@@ -1,6 +1,6 @@
 .salt-theme {
-  --salt-duration-instant: 100;
-  --salt-duration-perceptible: 300;
-  --salt-duration-notable: 1000;
-  --salt-duration-cutoff: 10000;
+  --salt-duration-instant: 100ms;
+  --salt-duration-perceptible: 300ms;
+  --salt-duration-notable: 1000ms;
+  --salt-duration-cutoff: 10000ms;
 }
