--- a/packages/lab/src/tabs-next/TabstripNext.css
+++ b/packages/lab/src/tabs-next/TabstripNext.css
@@ -5,9 +5,9 @@
   --tabs-tabstrip-display: inline-flex;
   --tabs-tabstrip-background: transparent;
 
-  --saltTabs-activationIndicator-height: 1px;
+  --saltTabs-activationIndicator-height: var(--salt-size-border);
   --tabs-activationIndicator-background: var(--salt-container-primary-borderColor);
-  --tabs-activationIndicator-thumb-height: 2px;
+  --tabs-activationIndicator-thumb-height: var(--salt-editable-borderWidth-active);
   --tabs-tab-spacing: var(--salt-spacing-100);
 
   align-items: flex-start;
@@ -15,7 +15,6 @@
   font-size: var(--salt-text-fontSize);
   font-weight: var(--salt-text-fontWeight);
   position: relative;
-  overflow: hidden;
   display: flex;
   min-width: 28px;
   width: 100%;
@@ -67,15 +66,18 @@
   width: 100%;
   align-items: center;
   display: flex;
-  gap: var(--tabs-tab-spacing);
-  flex-basis: auto;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-wrap: wrap;
+  min-width: 0;
+  flex-wrap: nowrap;
   justify-content: flex-start;
   line-height: var(--tabs-tabstrip-height);
+  overflow: hidden;
 }
 
 .saltTabstripNext-centered .saltTabstripNext-inner {
   justify-content: center;
+}
+
+/* We use this to wrap each tab to create space*/
+.saltTabstripNext-tabWrapper {
+  padding-right: var(--tabs-tab-spacing);
 }
