fix weird height issue with activation indicator and line-height

--- a/packages/lab/src/tabs-next/TabNext.css
+++ b/packages/lab/src/tabs-next/TabNext.css
@@ -56,7 +56,8 @@
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
-  height: var(--saltTabs-tabstrip-height, var(--salt-size-stackable));
+  /* visually center the text */
+  line-height: calc(var(--tabs-tabstrip-height) - var(--tabs-activationIndicator-thumb-height));
   outline: none;
   padding: 0 var(--tabs-tab-spacing);
   position: relative;
