--- a/packages/lab/src/tabs-next/TabstripNext.css
+++ b/packages/lab/src/tabs-next/TabstripNext.css
@@ -4,7 +4,7 @@
   --tabs-tabstrip-display: var(--saltTabs-tabstrip-display, inline-flex);
   --tabs-tabstrip-background: var(--saltTabs-tabstrip-background, transparent);
 
-  --tabs-activationIndicator-thumb-height: var(--saltTabs-activationIndicator-thumb-height, var(--salt-size-bar));
+  --tabs-activationIndicator-thumb-height: var(--saltTabs-activationIndicator-thumb-height, var(--salt-size-border));
   --tabs-activationIndicator-height: var(--saltTabs-activationIndicator-height, calc(var(--tabs-activationIndicator-thumb-height) / 2));
   --tabs-activationIndicator-background: var(--saltTabs-activationIndicator-background, var(--salt-container-primary-borderColor));
   --tabs-tab-spacing: var(--salt-spacing-100);
